# fitness

./: .gitignore  01 Speed vs Distance.ipynb  02 - Summaries.ipynb  CLAUDE.md  Makefile  Modeling.ipynb  README.md  Shoe Usage.ipynb  dashboard.py  miles_by_shoes.py  pyproject.toml
api/: DATABASE.md  Makefile  README.md  UNUSED_FUNCTIONS_ANALYSIS.md  alembic.ini  pyproject.toml  run_migration.py
api/alembic/: env.py
api/alembic/versions/: 0001_create_runs_table.py  001_create_runs_table.py  16b1cd7556b0_add_oauth_credentials_table.py  1d4f4234bffa_add_synced_runs_table_for_google_.py  d982550cf8a6_add_runs_history_table_and_extend_runs_.py
api/data/: retired-shoes.json
api/fitness/: database.py
api/fitness/agg/: __init__.py  mileage.py  mileage_over_time.py  seconds.py  shoes.py  training_load.py
api/fitness/app/: app.py  auth.py  constants.py  dependencies.py  env_loader.py  metrics.py  models.py  run_edit_routes.py  shoe_routes.py  sync_routes.py
api/fitness/app/routers/: __init__.py  metrics.py  mmf.py  oauth.py  run.py  shoes.py  strava.py  summary.py  sync.py
api/fitness/db/: connection.py  oauth_credentials.py  runs.py  runs_history.py  shoes.py  synced_runs.py
api/fitness/google/: __init__.py  calendar_client.py
api/fitness/integrations/: strava.py
api/fitness/integrations/google/: auth.py  calendar_client.py
api/fitness/integrations/strava/: __init__.py  client.py  models.py
api/fitness/load/: __init__.py  run.py  strava.py
api/fitness/load/mmf/: load.py  models.py
api/fitness/load/strava/: __init__.py  client.py  load.py  models.py
api/fitness/models/: TrainingLoad.py  __init__.py  database.py  run.py  run_detail.py  run_with_shoes.py  shoe.py  sync.py  training_load.py
api/fitness/services/: __init__.py  data_sync.py  retirement.py  run_service.py
api/fitness/utils/: timezone.py
api/scripts/: create_oauth_table.py  get_google_tokens.py  get_strava_tokens.py
api/tests/_factories/: run.py
api/tests/agg/: test_mileage.py  test_seconds.py  test_shoes.py  test_training_load.py
api/tests/app/: conftest.py  test_app.py  test_auth.py  test_datetime_utc_editing.py  test_main_endpoints.py  test_retirement_endpoints.py  test_run_edit_endpoints.py  test_run_router.py
api/tests/app/oauth_router/: test_oauth_endpoints.py
api/tests/db/: test_runs_history.py
api/tests/e2e/: conftest.py  test_data_refresh.py  test_metrics_endpoints.py  test_run_details_endpoint.py  test_runs_endpoints.py  test_shoe_workflows.py  test_workflow.py
api/tests/google/: test_calendar_client.py
api/tests/load/: test_strava_client.py  test_strava_load.py
api/tests/models/: test_run.py
api/tests/services/: test_retirement.py
api/tests/utils/: test_timezone.py
(+163 files in other folders)
