[project]
name = "fitness"
version = "0.1.0"
description = "Analysis of my fitness data"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "altair>=5.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "ty>=0.0.1a6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that use an external system",
]
