[project]
name = "fitness"
version = "0.1.0"
description = "Analysis of my fitness data"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
    "ty>=0.0.1a16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that use an external system",
]
addopts = "--cov=fitness --cov-report html"
